rename to atc, turbine

--- a/build.yml
+++ b/build.yml
@@ -1,12 +1,12 @@
 ---
-image: winston/winston-ci
+image: atc/concourse
 
 env:
   - GOROOT: /usr/local/go
   - PATH: $GOROOT/bin:$PATH
   - GOPATH: /tmp/build/src
   - PATH: /tmp/build/bin:$PATH
-  - REPO_DIR: $GOPATH/src/github.com/winston-ci/winston
+  - REPO_DIR: $GOPATH/src/github.com/concourse/atc
 
 script: |
   mkdir -p $(dirname $REPO_DIR)
