--- a/web/javascript/package.json
+++ b/web/javascript/package.json
@@ -12,7 +12,8 @@
     "moment": "^2.8.3",
     "moment-duration-format": "^1.3.0",
     "react": "^0.12.0",
-    "react-immutable-render-mixin": "^0.6.4"
+    "react-immutable-render-mixin": "^0.6.4",
+    "node-ansiparser": "^1.0.2"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
