--- a/web/javascript/package.json
+++ b/web/javascript/package.json
@@ -9,8 +9,8 @@
     "fluxxor": "^1.5.0",
     "immutable": "^3.0.3",
     "jquery": "^2.1.1",
-    "moment": "^2.8.3",
-    "moment-duration-format": "^1.3.0",
+    "moment": "2.8.3",
+    "moment-duration-format": "1.3.0",
     "react": "^0.12.0",
     "react-immutable-render-mixin": "^0.6.4",
     "node-ansiparser": "^1.0.2"
