--- a/web/assets/package.json
+++ b/web/assets/package.json
@@ -23,6 +23,8 @@
     "gulp-concat": "^2.5.2",
     "gulp-jasmine-browser": "0.0.3",
     "gulp-jshint": "^1.10.0",
+    "gulp-less": "^3.0.2",
+    "gulp-minify-css": "^1.0.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "jasmine": "^2.2.1",
