reorganize javascript building
Signed-off-by: Corbin Halliwill <challiwill@pivotal.io>

--- a/web/package.json
+++ b/web/package.json
@@ -35,7 +35,13 @@
     "reactify": "^0.15.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.1.1"
+    "watchify": "^2.1.1",
+
+    "elm": "0.16.0",
+    "elm-test": "0.16.0",
+    "less": "2.5.3",
+    "less-plugin-clean-css": "1.5.1",
+    "uglify-js": "2.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
