--- a/web/Makefile
+++ b/web/Makefile
@@ -1,6 +1,7 @@
 ELM_FILES = $(shell find elm/ -type f -name '*.elm' -or -name '*.js')
 LESS_FILES = $(shell find assets/css/ -type f -name '*.less')
 PUBLIC_FILES = $(shell find public/ -type f)
+TEMPLATE_FILES = $(shell find templates/ -type f)
 
 all: public/elm.min.js public/main.css bindata.go
 
@@ -10,7 +11,7 @@ clean:
 	rm -f public/elm.js public/elm.min.js public/main.css
 
 public/elm.js: $(ELM_FILES)
-	cd elm && elm make --warn --output ../public/elm.js --yes src/Main.elm
+	cd elm && elm make --warn --output ../public/elm.js --yes src/Main.elm src/JobPage.elm
 
 public/main.css: $(LESS_FILES)
 	lessc --clean-css="--advanced" assets/css/main.less $@
@@ -18,6 +19,6 @@ public/main.css: $(LESS_FILES)
 public/elm.min.js: public/elm.js
 	uglifyjs < $< > $@
 
-bindata.go: $(PUBLIC_FILES)
+bindata.go: $(PUBLIC_FILES) $(TEMPLATE_FILES)
 	go-bindata -pkg web templates/... public/...
 	go fmt bindata.go
