make job page live update
- also speed up template rendering by removing database calls
- also rename Main.elm to BuildPage.elm

[#109657184]

Signed-off-by: Robert Neumann <rneumann@pivotal.io>

--- a/web/Makefile
+++ b/web/Makefile
@@ -11,7 +11,7 @@ clean:
 	rm -f public/elm.js public/elm.min.js public/main.css
 
 public/elm.js: $(ELM_FILES)
-	cd elm && elm make --warn --output ../public/elm.js --yes src/Main.elm src/JobPage.elm
+	cd elm && elm make --warn --output ../public/elm.js --yes src/BuildPage.elm src/JobPage.elm
 
 public/main.css: $(LESS_FILES)
 	lessc --clean-css="--advanced" assets/css/main.less $@
