--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,5 +2,8 @@ FROM node
 
 RUN npm install -g phantomjs
 
-RUN apt-get update && apt-get -y install locales && locale-gen en_US.UTF-8
+RUN apt-get update && apt-get -y install locales && \
+      echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen && \
+      locale-gen
+
 ENV LANG en_US.UTF-8
