--- a/web/package.json
+++ b/web/package.json
@@ -6,14 +6,15 @@
     "url": "git://github.com:concourse/atc.git"
   },
   "dependencies": {
+    "chokidar": "^1.4.2",
     "fluxxor": "^1.5.0",
     "immutable": "^3.0.3",
     "jquery": "^2.1.1",
     "moment": "2.8.3",
     "moment-duration-format": "1.3.0",
+    "node-ansiparser": "^2.0.0",
     "react": "^0.12.0",
-    "react-immutable-render-mixin": "^0.6.4",
-    "node-ansiparser": "^2.0.0"
+    "react-immutable-render-mixin": "^0.6.4"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
@@ -36,7 +37,6 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.1",
-
     "elm": "0.16.0",
     "elm-test": "0.16.0",
     "less": "2.5.3",
