autoscroll for non-succeeded builds
[#111786108]

Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/web/Makefile
+++ b/web/Makefile
@@ -20,5 +20,5 @@ public/elm.min.js: public/elm.js
 	uglifyjs < $< > $@
 
 bindata.go: $(PUBLIC_FILES) $(TEMPLATE_FILES)
-	go-bindata -pkg web templates/... public/...
+	go-bindata ${DEV} -pkg web templates/... public/...
 	go fmt bindata.go
